# aeroconnections-library-ms

./: .env.example  CHANGELOG.md  Dockerfile  LICENSE  README.md  SECURITY.md  design.md  docker-compose.yml  pyproject.toml  tailwind.config.js
apps/books/: models.py  views.py
apps/borrowers/: views.py
apps/loans/: models.py  views.py
apps/notifications/: context_processors.py  models.py  tasks.py  views.py
apps/setup/: models.py  views.py
apps/utils/: __init__.py
config/: celery.py  settings.py  urls.py
static/: tailwind.min.css
static/css/: style.css
static/src/: tailwind.css
templates/: base.html
templates/account/: login.html  logout.html
templates/books/: book_confirm_delete.html  book_create.html  book_detail.html  book_edit.html  book_import.html  book_list.html
templates/borrowers/: borrower_confirm_delete.html  borrower_confirm_permanent_delete.html  borrower_confirm_reactivate.html  borrower_detail.html  borrower_form.html  borrower_import.html  borrower_list.html
templates/includes/: footer.html  pagination.html
templates/loans/: activity_log.html  dashboard.html  loan_confirm_delete.html  loan_create.html  loan_detail.html  loan_list.html  loan_return.html  return_note_confirm_delete.html  return_notes.html
templates/notifications/: backup_list.html  settings.html
