[project]
name = "library-ms"
version = "1.4.0"
description = "A free and open-source library management system for AeroConnections"
authors = [{name = "AeroConnections", email = "it@aeroconnections.com"}]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "AGPL-3.0"}

[project.urls]
Homepage = "https://github.com/aeroconnections/library-ms"
Documentation = "https://library-ms.readthedocs.io"
Repository = "https://github.com/aeroconnections/library-ms"
Issues = "https://github.com/aeroconnections/library-ms/issues"
Changelog = "https://github.com/aeroconnections/library-ms/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["test_*.py", "*_test.py"]
addopts = "--cov=apps --cov-report=term-missing"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.mypy]
python_version = "3.11"
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]
strict = true
